theme/sldocs.css
/* ... */
/* ==============================
   Grids Responsiveness
   ============================== */
@media  screen and (max-width:900px) {
  body {
    /* display: grid;
    grid-gap: 0;
    grid-template-rows: var(--hdr-height) calc(100vh - var(--hdr-height)) var(--ftr-height);
    grid-template-columns: 20% 1fr 20%; */
    grid-template-areas:
      'gheader gheader gheader'
      'gmain gmain gmain'
      'gfooter gfooter gfooter';
  }
}
@media  screen and (max-width:1200px) and (min-width:900px) {
  body{
    grid-template-areas:
    'gheader gheader gheader'
    'gmenu gmain gmain'
    'gfooter gfooter gfooter';
  }
}
/* ==============================
   Fonts
   ============================== */

@font-face {
  font-family: 'Archerus Grotesque Medium';
  src: url('https://docs.snaplogic.com/fonts/Acherus-Grotesque-Medium.otf') format('opentype');
}

@font-face {
  font-family: 'Archerus Grotesque Bold';
  src: url('https://docs.snaplogic.com/fonts/Acherus-Grotesque-Bold.otf') format('opentype');
}


/* ==============================
   Body
   ============================== */

body {
  margin: 0;
  padding: 0;
  height: 100vh;
  width: 100vw;
  font-family: var(--font-body);
  font-size: var(--body-font-size);
  overflow-x: hidden;
  transition: opacity 0.1s ease-in-out;
  overflow-y: scroll;
}

main {
  color: var(--main-textcolor);
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: 1fr 220px;
}
@media  screen and (max-width:1200px){
main{
  grid-template-columns: 1fr 0;
}
}

article {
  margin: 0;
  padding: 0 1em 1em 2em;
  width: 100%;
  letter-spacing: 0.03em;
  font-size: 14px;
  line-height: 22px;
  /* overflow-x: hidden; */
  scrollbar-width: none;
}
article .xref{
  color: #1E5BD6;
  text-decoration: underline;
  text-decoration-color: #C9D6F4;
  text-underline-offset: 2px;
}
article .xref:hover{
  text-decoration: underline;
  text-decoration-color: #1E5BD6;
}
#index article .xref:hover{
  text-decoration: none;
}
.p { 
  font-size: 14px;
  line-height: 22px;
  font-family: var(--font-body);
  color: var(--SL-grey09);
  font-weight: 400;
  margin: 15px 0px 5px 0px;
  letter-spacing: 0.03em;
}
/* ==============================
   Body Responsiveness
   ============================== */
   @media screen and (max-width: 1100px){
    .p {
      font-size: 12px;
    }
  }
/* ==============================
   GCSE
   Must be above other table styling.
   ============================== */

.gsc-control-cse,
.gsc-search-box {
  margin: -5px 0 0 0;
  padding: 0 !important;
}
table.gsc-search-box th,
table.gsc-search-box td,
.gsc-search-box {
  border: 0 !important;
}
table.gsc-search-box td.gsc-input {
  padding-right: 3px !important;
}
.gsc-input,
.gsc-search-button {
  margin: 0 !important;
  padding: 0 !important;
  border: 0 !important;
}
.gsc-search-button-v2 {
  margin: 0 !important;
  padding: 8px !important;
  border-radius: 4px !important;
}
.gsc-control-wrapper-cse .gsc-results-wrapper-visible{
  z-index: 2;
}
.gsc-control-wrapper-cse .gsc-modal-background-image{
  z-index: 1;
}
/* .loader {
  text-align: center;
  position: absolute;
  left: 40%;
  bottom: 10px;
  padding: 10px;
  display: none; 
} 
.spinner {
  border: 3px solid #f3f3f3; 
  border-top: 3px solid #3498db; 
  border-radius: 50%;
  width: 20px;
  height: 20px;
  animation: spin 2s linear infinite;
  display: inline-block;
}
@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
} */


#show-more {
  display: none;
  position: absolute;
  bottom: 5px;
  left: 40%;
  padding: 10px 20px;
  background-color: var(--SL-blue06);
  border-radius: 4px;
  color: white;
  text-align: center;
  font-weight: 500;
  font-family: var(--font-body);
  font-size: 14px;
  line-height: 16px;
  cursor: pointer;
}

#show-more:hover {
  background-color: var(--SL-blue06);
}

/* ==============================
   FontAwesome
   https://fontawesome.com/docs/web/setup/upgrade/pseudo-elements
   ============================== */

nav.toc a[rel*="external"]::before{
  /* content: "\f08e";
  font-family: "Font Awesome 6 Free";
  font-weight: 900;
  display: inline-block;
  padding-right: .5ch;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased; */
  content: ""; /* Empty content */
  display: inline-block;
  background-image: url(https://d3132s9xzuu9s8.cloudfront.net/k/img/external-link-icon-blue.svg);
  background-size: contain;
  background-repeat: no-repeat;
  width: 17px;  /* Fixed width */
  height: 17px;
  margin-left: 2px; /* Add some space between text and image */
  vertical-align: middle; /* Adjust alignment */
}
main a[rel*="external"]::after {
  /* content: "\f08e";
  font-family: "Font Awesome 6 Free";
  font-weight: 900;
  display: inline-block;
  padding-left: .5ch;  
  text-rendering: auto;
  -webkit-font-smoothing: antialiased; */
  content: ""; /* Empty content */
  display: inline-block;
  background-image: url(https://d3132s9xzuu9s8.cloudfront.net/k/img/external-link-icon-blue.svg);
  background-size: contain;
  background-repeat: no-repeat;
  width: 14px;  /* Fixed width */
  height: 14px;
  margin-top: -3px;
  margin-left: 2px; /* Add some space between text and image */
  vertical-align: middle; /* Adjust alignment */
}
.ph a[rel*="external"]::after {
  content: ""; /* Empty content */
  display: inline-block;
  /* background-image: url(https://d3132s9xzuu9s8.cloudfront.net/k/img/external-link-icon-grey.svg); */
  background-size: contain;
  background-repeat: no-repeat;
  width: 14px;  /* Fixed width */
  height: 14px;
  margin-left: 2px; /* Add some space between text and image */
  vertical-align: middle; /* Adjust alignment */
}
/* ... */

